2008-09-11  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/util.py:
	* tests/test_proxy.py:
	fix test suite and ProxyItem class, so that test cases actually pass

2008-09-11  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* tests/testproxy.py:
	* tests/test_proxy.py:
	rename test suite so it is actually run

2008-09-11  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/util.py:
	added a new type of canvas item, ProxyItem
	* tests/testproxy.py:
	test suite for ProxyItem

2008-09-04  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py:
	Fix seeking again.

2008-09-04  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/viewer.py:
	Call gtk.gdk.display_get_default().sync() before the initial call to
	set_xwindow_id().
	Fixes #334631  ... hopefully FOR EVER !

2008-08-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/elements/imagefreeze.py:
	Rewrite imagefreeze seeking/output.
	Now uses a gst.Task for outputting and proper seeking handling.

2008-08-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/timeline/source.py:
	Fix description

2008-08-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/elements/Makefile.am:
	* pitivi/elements/imagefreeze.py:
	New image-to-video element. Still needs more testing before being
	usable in a timeline.

2008-07-28  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/complextimeline.py:
	Proper cliping of labels on timeline objects.

2008-07-28  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/ui/complextimeline.py:
	when splitting clips, setMediaStartDuration is called before
	setStartDuration.
	zoom controls now use discrete zoom values specified in list

2008-07-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py:
	Fix ruler redraw again :) This time redraws as little as possible by
	only forcing the redraw of the old and new curser position instead of
	the whole area between the two.
