@@ -1,3 +1,10 @@
+2008-09-17  Edward Hervey  <edward.hervey@collabora.co.uk>
+
+	* pitivi/bin.py:
+	* pitivi/settings.py:
+	* pitivi/ui/exportsettingswidget.py:
+	Enable muxing of raw audio/video streams.
+
 2008-09-11  Brandon Lewis  <brandon_lewis@berkeley.edu>
 
 	* pitivi/ui/util.py:
